examples/test/testpolicy3548.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3548
  namespace: namespace371
spec:
  podSelector:
    matchLabels:
      key0: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value12
          key34: value7
      podSelector:
        matchLabels:
          key40: value13
          key47: value38
          key4: value4
